--- a/project/style.css
+++ b/project/style.css
@@ -142,7 +142,7 @@ body {
     width: 800px;
     margin: 0 auto;
 }
-.slide {
+.owl-carousel{
     width: 700px;
     margin: 0 auto;
     margin-top: 50px;
